# climate_mrp_polling

./: .gitattributes  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
data/interim/: con_2010_pops.csv  percentage_overlap_2022_councils_area.csv  percentage_overlap_2022_councils_pop.csv  percentage_overlap_2023_councils_area.csv  percentage_overlap_2023_councils_pop.csv
data/interim/polling/: Onward2022.csv  Onward2022_lookup.csv  RenewableUK2022.csv  RenewableUK2022_lookup.csv
data/raw/: Westminster_Parliamentary_Constituencies_(Dec_2020)_Names_and_Codes_in_the_United_Kingdom.csv
data/raw/con_pop/: spc-21-tabs.xlsx  ukpc-21-tabs.xlsx
data/raw/polling/: Public-First-Poll-for-Onward-MRP-Model.xlsx  RenewableUK-MRP-Constituency-Topline.xlsx
docs/: _config.yml  index.md
docs/_datasets/constituencies_to_local_authorities/: 0.1.0.md  0.1.md  0.md  latest.md
docs/_datasets/local_authority_climate_polling/: 0.1.0.md  0.1.1.md  0.1.md  0.md  latest.md
docs/_downloads/constituencies-to-local-authorities-json/: 0.1.0.md  0.1.md  0.md  latest.md
docs/_downloads/constituencies-to-local-authorities-sqlite/: 0.1.0.md  (+3 more)
docs/_versionlists/: constituencies_to_local_authorities.md  local_authority_climate_polling.md
notebooks/: better_population_analysis.ipynb  la_estimates.ipynb  test_overlap_info.ipynb  transform_geo_files.ipynb
src/climate_mrp_polling/: __main__.py  convert_polling.py  convert_specific_polling.py  create_con_pop.py  create_overlap_information.py
tests/: test_climate_mrp_polling.py
(+60 files in other folders)
